--- a/src/Components/footer/ResponsiveFooter.css
+++ b/src/Components/footer/ResponsiveFooter.css
@@ -1,7 +1,7 @@
 @media all and (max-width: 600px) {
    footer {
        height: 190px;
-       background-color: #92d362;
+       background-color: #5EAAA8;
        align-items: flex-start;
        justify-content: center;
        align-content: center;
@@ -15,7 +15,7 @@
 
    .leftContent p {
     font-size: .7rem;
-    color: white;
+    color: #F7F3E9;
    }
 
    .rigthContent p {
