--- a/src/Components/header/ResponsiveHeader.css
+++ b/src/Components/header/ResponsiveHeader.css
@@ -2,7 +2,7 @@
 @media all and (max-width: 600px) { 
 
     header {
-        background-color: #92d362;
+        background-color: #5EAAA8;
     }
     .wraper ul{
       display: none;
